# pr-notice-slack-bot

./: Cargo.toml  README.md
src/: main.rs
src/adapter/: github.rs  slack.rs
src/domain/: model.rs
src/domain/model/: github.rs  slack.rs
src/driver/: batch.rs
