[package]
name = "pullrequest-slack-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
mockito = "1.4.0"
rstest = "0.21.0"